NIFI-13750 Abort SFTP listing once maxResults is reached